# virtual-rack

./: Cargo.toml  build.rs  main  main.c
front/: package-lock.json  package.json  vite.config.ts
front/src/: App.css  App.tsx  Footer.css  Footer.module.css  Footer.tsx  api.ts  index.css  index.tsx
front/src/api/: node.ts  state.ts
front/src/components/: Link.tsx  Node.module.css  Node.tsx  Port.module.css  Port.tsx  Ports.tsx
front/src/routes/: Links.css  Links.module.css  Links.tsx  Nodes.module.css  Nodes.tsx  index.tsx
src/: lib.rs  main.rs
src/pipewire/: mod.rs  node.rs  proxies.rs  state.rs
src/server/: mod.rs
src/server/events/: mod.rs  node.rs  state.rs
