[package]
name = "virtual-rack"
version = "0.1.0"
edition = "2021"

[features]
shuttle=[]

[dependencies]
axum = { version = "0.7.5", features = ["http2"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
futures = "0.3.30"
o2o = "0.4.8"
pipewire = "0.8.0"
rcgen = "0.13.1"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
structdiff = "0.7.1"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tower-http = { version = "0.5.2", features = ["trace","fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[target.'cfg(build = "debug")'.dependencies]
tower-http = { version = "0.5.2", features = ["trace","fs","cors"] }

[dev-dependencies]
shuttle = "0.7.1"

